@@ -14,7 +14,7 @@ export QT_MAJOR_VER="5.6"
 export QT_SDK_DIR="/opt/Qt/qt-current/${QT_MAJOR_VER}"
 
 export ANDROID_SDK_ROOT="/opt/android_sdk/android-sdk-linux"
-export ANDROID_NDK_ROOT="/opt/android_ndk/android-ndk-r10e"
+export ANDROID_NDK_ROOT="/opt/android_ndk/android-ndk-r11c"
 export ANDROID_NDK_TOOLCHAIN_VERSION="4.9"
 export ANDROID_PLATFORM="android-21"
 
